<resources>
    <string name="app_name">Filmoteca</string>
    <string name="createdBy">Creada por Yaser El Dabete Arribas</string>
    <string name="uaDescription">Imagen máster móviles</string>
    <string name="webButton">Ir al sitio web</string>
    <string name="supportButton">Obtener soporte</string>
    <string name="backButton">Volver</string>
    <string name="noFunctionality">Funcionailad sin implementar</string>
    <string name="showAFilm">Ver película A</string>
    <string name="showBFilm">Ver película B</string>
    <string name="about">Acerca de</string>
    <string name="editFilm">Editar película</string>
    <string name="saveChanges">Guardar</string>
    <string name="cancelChanges">Cancelar</string>
    <string name="goMain">Volver a la principal</string>
    <string name="movieA">Película A</string>
    <string name="movieB">Película B</string>
    <string name="avengers">Los Vengadores</string>
    <string name="edited">La película %1$s ha sido editada</string>
    <string name="filmDirector">Director:</string>
    <string name="showIMDB">Ver en IMDB</string>
    <string name="extendedVersion">Versión extendida</string>
    <string name="year">Año</string>
    <string name="lordOfTheRing1">El Señor de los Añillos 1</string>
    <string name="hobbit1">El Hobbit 1</string>
    <string name="action_adventure">Acción, Aventura</string>
    <string name="altImage">Carátula de la película</string>
    <string name="takePhoto">Capturar fotogrfía</string>
    <string name="chooseImage">Selecciona imagen</string>
    <string name="filmTitle">Título de la película</string>
    <string name="filmDirectorName">Nombre del director</string>
    <string name="imdbLink">Enlace a IMDB</string>
    <string name="action">Acción</string>
    <string name="drama">Drama</string>
    <string name="comedy">Comedia</string>
    <string name="terror">Terror</string>
    <string name="chooseOption">Elige una opcion</string>
    <string name="comments">Comentarios</string>
    <string name="withoutTitle">Sin título</string>
    <string name="scifi">Ciencia fincción</string>
    <string name="menu">Menú</string>
    <string name="addFilm">Añadir película</string>
    <string name="intouchables">Intocable</string>
    <string name="delete">Eliminar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="disconnect">Desconectar cuenta</string>
</resources>