<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/screen_margin"
    android:orientation="vertical"
    tools:context=".FilmEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/editFilmImage"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:contentDescription="@string/altImage"
            android:layout_weight="1" />

        <Button
            android:id="@+id/takePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/takePhoto"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/widgets_margin"
            android:layout_marginLeft="@dimen/widgets_margin"
            android:layout_marginStart="@dimen/widgets_margin"/>

        <Button
            android:id="@+id/choosePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseImage"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/widgets_margin" />
    </LinearLayout>

    <EditText
        android:id="@+id/editFilmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filmTitle"
        android:autofillHints="@string/filmTitle"
        android:textSize="22sp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editDirectorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filmDirectorName"
        android:autofillHints="@string/filmDirectorName"
        android:textSize="22sp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editFilmYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:autofillHints="@string/year"
        android:textSize="22sp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editFilmIMDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imdbLink"
        android:autofillHints="@string/imdbLink"
        android:textSize="22sp"
        android:inputType="text"/>

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/chooseOption"
        android:entries="@array/gender"
        android:layout_marginTop="@dimen/widgets_margin"/>

    <Spinner
        android:id="@+id/formatSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/chooseOption"
        android:entries="@array/format"
        android:layout_marginTop="@dimen/widgets_margin"/>

    <EditText
        android:id="@+id/editComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comments"
        android:autofillHints="@string/comments"
        android:textSize="22sp"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/widgets_margin">

        <Button
            android:id="@+id/cancelChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelChanges"
            android:layout_weight="1" />

        <Button
            android:id="@+id/saveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveChanges"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>